plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.8.1'
}

group 'de.fraunhofer'
version '1.5'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'com.googlecode.json-simple:json-simple:1.1'
    implementation 'de.fraunhofer.iem:swan:3.2.0'
    implementation 'ca.mcgill.sable:soot:3.3.0'
    implementation 'org.slf4j:slf4j-api:1.7.29'
    implementation 'org.slf4j:slf4j-simple:1.7.29'
    implementation 'org.apache.commons:commons-lang3:3.0'
    //implementation files('src/main/resources/Jar/swan.jar')
}

intellij {
    version = "2022.1"
    type = "IC"
    plugins = ["com.intellij.java"]

}

patchPluginXml {
    changeNotes = "Initial release of the SWAN_Assist plugin: <br>add, delete and update methods of interest list" +
            "<br>- suggest methods" +
            "<br>- filter list" +
            "<br>- import and export configuration file"
}

runIde {
    jvmArgs '-Xmx1024m'
}